some cahgnes for dynamdb table name
