# docs/swagger.json
@@ -12,7 +12,37 @@
     "host": "tvwvnaqfy9.execute-api.us-west-2.amazonaws.com/api",
     "basePath": "/",
     "paths": {
-        "/v2/reservation": {
+        "/v2/reservations": {
+            "get": {
+                "description": "this endpoint Get the summary of all reservations",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reservation"
+                ],
+                "summary": "Get the summary of all reservations",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Reservation"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/lib.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "this endpoint creates a new reservation for vehicle",
                 "consumes": [
@@ -47,38 +77,6 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/lib.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/lib.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/v2/reservations": {
-            "get": {
-                "description": "this endpoint Get the summary of all reservations",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "reservation"
-                ],
-                "summary": "Get the summary of all reservations",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Reservation"
-                            }
                         }
                     },
                     "500": {
@@ -199,7 +197,7 @@
         },
         "/v2/search": {
             "get": {
-                "description": "this endpoint will search facility on based their lan and lon",
+                "description": "if user enter lon and lat query this endpoint will search facility based on lon and lat facility if user don't enter, this endpoint will send all facility",
                 "consumes": [
                     "application/json"
                 ],
@@ -209,21 +207,19 @@
                 "tags": [
                     "search"
                 ],
-                "summary": "search facility on based their lat and lon",
+                "summary": "search facility",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "Latitude",
                         "name": "lat",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "longitude",
                         "name": "lon",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -322,7 +318,7 @@
                 "country": {
                     "type": "string"
                 },
-                "id": {
+                "facility_id": {
                     "type": "string"
                 },
                 "latitude": {
