# models/facility.go
@@ -1,7 +1,7 @@
 package models
 
 type Facility struct {
-	Id        string `json:"id"`
+	Id        string `json:"facility_id"`
 	City      string `json:"city"`
 	Country   string `json:"country"`
 	Latitude  int64  `json:"latitude"`
